Button: Prevent Icon Right Aligned Overlap

--- a/widgets/button/styles/flat.less
+++ b/widgets/button/styles/flat.less
@@ -67,7 +67,7 @@
 		& when not ( @has_text = true ) {
 			.sow-icon-image,
 			[class^="sow-icon-"] {
-					margin: 0;
+				margin: 0;
 			}
 		}
 
@@ -79,6 +79,10 @@
 			[class^="sow-icon-"] {
 				font-size: @icon_size;
 			}
+		}
+
+		&.ow-icon-placement-right > span {
+			flex-direction: row-reverse;
 		}
 
 		&.ow-button-hover:active,
