--- a/widgets/button/styles/wire.less
+++ b/widgets/button/styles/wire.less
@@ -65,7 +65,7 @@
 		& when not ( @has_text = true ) {
 			.sow-icon-image,
 			[class^="sow-icon-"] {
-					margin: 0;
+				margin: 0;
 			}
 		}
 
@@ -77,6 +77,10 @@
 			[class^="sow-icon-"] {
 				font-size: @icon_size;
 			}
+		}
+
+		&.ow-icon-placement-right > span {
+			flex-direction: row-reverse;
 		}
 
 		&.ow-button-hover:active,
